--- a/aws/configmap.yml
+++ b/aws/configmap.yml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: configmap
 data:
-  restaurantdb_url: jdbc:mysql://mysql-database.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/restaurantdb
-  foodcataloguedb_url: jdbc:mysql://mysql-database.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/foodcatalogdb
-  userdb_url: jdbc:mysql://mysql-database.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/userdb
+  restaurantdb_url: jdbc:mysql://mysql-db-instance.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/restaurantdb
+  foodcataloguedb_url: jdbc:mysql://mysql-db-instance.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/foodcatalogdb
+  userdb_url: jdbc:mysql://mysql-db-instance.c706ecugaxha.ap-south-1.rds.amazonaws.com:3306/userdb
   orderdb_url: mongodb+srv://admin:VishalSingh@cluster0.pswqba8.mongodb.net/
   eureka_service_address: http://eureka-0.eureka-service:8761/eureka
 
